; ModuleID = '/home/carl/AnghaBench/redis/src/extr_scripting.c_redisProtocolToLuaType_Error.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_scripting.c_redisProtocolToLuaType_Error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"err\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @redisProtocolToLuaType_Error(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 1
  %8 = call i8* @strchr(i8* %7, i8 signext 13)
  store i8* %8, i8** %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @lua_newtable(i32* %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @lua_pushstring(i32* %11, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %13 = load i32*, i32** %3, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 1
  %16 = load i8*, i8** %5, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = ptrtoint i8* %16 to i64
  %19 = ptrtoint i8* %17 to i64
  %20 = sub i64 %18, %19
  %21 = sub nsw i64 %20, 1
  %22 = trunc i64 %21 to i32
  %23 = call i32 @lua_pushlstring(i32* %13, i8* %15, i32 %22)
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @lua_settable(i32* %24, i32 -3)
  %26 = load i8*, i8** %5, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 2
  ret i8* %27
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @lua_pushlstring(i32*, i8*, i32) #1

declare dso_local i32 @lua_settable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
